--- a/css/2006.css
+++ b/css/2006.css
@@ -46,13 +46,13 @@
     left: 72px;
 }
 
-.ytp-chrome-bottom .ytp-chapters-container {
+#movie_player .ytp-chrome-bottom .ytp-chapters-container {
 	width: fit-content !important;
 }
 
-.ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar-container {
-    top: -6px;
-    left: 0;
+#movie_player.ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar-container {
+    top: -6px !important;
+    left: 0 !important;
 }
 
 .ytp-chrome-bottom .ytp-progress-bar {
