--- a/css/2010-dark.css
+++ b/css/2010-dark.css
@@ -43,10 +43,6 @@
 /* BUTTONS BASE */
 
 .ytp-chrome-bottom .ytp-button {
-    position: sticky !important;
-    height: 33px !important;
-    width: 40px !important;
-    bottom: 9px;
     border: solid 1px rgb(60, 65, 68);
     background: var(--pt-button-gradient) !important;
 }
@@ -77,7 +73,9 @@
 
 /* VOLUME BUTTON */
 /* DEFAULT */
-.ytp-button.ytp-mute-button svg {
+.ytp-button.ytp-mute-button svg,
+.ytp-button.ytp-volume-icon svg
+{
 	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume.png') no-repeat center;
 	background-size: 34px;
 	position: absolute;
@@ -85,30 +83,40 @@
 	left: 0;
 }
 
-.ytp-button.ytp-mute-button:hover svg {
+.ytp-button.ytp-mute-button:hover svg,
+.ytp-button.ytp-volume-icon:hover svg
+{
 	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-mute-hover.png') no-repeat center !important;
     background-size: 34px !important;
 }
 
 /* MEDIUM VOLUME */
-.ytp-volume-area[simplevolumenow="med"] .ytp-button.ytp-mute-button svg {
+.ytp-volume-area[simplevolumenow="med"] .ytp-button.ytp-mute-button svg,
+.ytp-volume-area[simplevolumenow="med"] .ytp-button.ytp-volume-icon svg
+{
     background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-med.png') no-repeat center;
 	background-size: 34px;
 }
 
 /* LOW VOLUME */
-.ytp-volume-area[simplevolumenow="low"] .ytp-button.ytp-mute-button svg {
+.ytp-volume-area[simplevolumenow="low"] .ytp-button.ytp-mute-button svg,
+.ytp-volume-area[simplevolumenow="low"] .ytp-button.ytp-volume-icon svg
+{
     background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-low.png') no-repeat center;
 	background-size: 34px;
 }
 
 /* MUTE */
-.ytp-button.ytp-mute-button[title="Unmute (m)"] svg {
+.ytp-button.ytp-mute-button[title="Unmute (m)"] svg,
+.ytp-button.ytp-volume-icon[title="Unmute (m)"] svg
+{
 	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-mute.png') no-repeat center;
     background-size: 34px;
 }
 
-.ytp-button.ytp-mute-button[data-title-no-tooltip="Unmute"]:hover svg {
+.ytp-button.ytp-mute-button[data-title-no-tooltip="Unmute"]:hover svg,
+.ytp-button.ytp-volume-icon[data-title-no-tooltip="Unmute"]:hover svg
+{
 	background: url('chrome-extension://__MSG_@@extension_id__/img/2010%20icons/volume-hover.png') no-repeat center;
     background-size: 34px;
 }
