--- a/css/delhi.css
+++ b/css/delhi.css
@@ -18,13 +18,21 @@
 {
     background-color: transparent !important;
     margin-top: 0 !important;
-    border-radius: 0;
+    border-radius: 0 !important;
+}
+
+.html5-video-player.ytp-delhi-modern:not(.ytp-embed) .ytp-button.ytp-next-button {
+    display: block !important;
+}
+
+.html5-video-player .ytp-chrome-bottom .ytp-progress-list {
+    border-radius: 0 !important;
 }
 
 .ytp-delhi-modern .ytp-chrome-controls .ytp-volume-area {
     background: none !important;
-    height: fit-content !important;
-    margin: 0;
+    height: initial !important;
+    margin: 0 !important;
 }
 
 .ytp-delhi-modern.ytp-delhi-horizontal-volume-controls .ytp-chrome-bottom.ytp-volume-slider-active .ytp-volume-area {
@@ -38,7 +46,7 @@
 .ytp-delhi-modern .ytp-chrome-bottom .ytp-time-wrapper-delhi,
 .ytp-delhi-modern .ytp-chrome-bottom .ytp-time-wrapper-delhi:after
 {
-    background: none;
+    background: none !important;
 }
 
 .ytp-autohide.paused-mode .ytp-playlist-menu-button, .ytp-autohide.paused-mode .ytp-shorts-title-channel, .ytp-autohide.paused-mode .ytp-title-channel, .ytp-autohide.paused-mode .ytp-title, .ytp-autohide.paused-mode .ytp-chrome-top .ytp-watch-later-button, .ytp-autohide.paused-mode .ytp-chrome-top .ytp-share-button, .ytp-autohide.paused-mode .ytp-chrome-top .ytp-copylink-button, .ytp-autohide.paused-mode .ytp-chrome-top .ytp-search-button, .ytp-autohide:not(.ytp-cards-teaser-shown) .ytp-cards-button, .ytp-autohide.paused-mode .ytp-overflow-button, .ytp-autohide.paused-mode .ytp-chrome-bottom, .ytp-chrome-top[aria-hidden="true"], .ytp-chrome-bottom[aria-hidden="true"] {
