last dev update for v1.9 before full release
 - new options for the delhi player
 - css fixes
 - better update log

--- a/css/2010.css
+++ b/css/2010.css
@@ -369,11 +369,11 @@
 }
 
 .ytp-chapter-container .ytp-chapter-title-content {
-  margin-bottom: 2px;
+	margin-bottom: 2px;
 }
 
 .ytp-chapter-container .ytp-chapter-title-prefix {
-  margin-bottom: 2px;
+	margin-bottom: 2px;
 }
 
 /* ################################# */
@@ -493,7 +493,8 @@
 .ytp-chrome-bottom .ytp-right-controls {
 	position: relative !important;
 	background: none !important;
-    margin: 0 !important;
+	height: initial !important;
+	margin: 0 !important;
 	padding-right: 0px;
 }
 
