--- a/css/2013.css
+++ b/css/2013.css
@@ -262,7 +262,7 @@
 	width: 35px !important;
 }
 
-.ytp-autohide .ytp-chrome-top {
+.ytp-autohide:not(.paused-mode) .ytp-chrome-top {
     display: none;
 }
 
