--- a/css/delhi.css
+++ b/css/delhi.css
@@ -46,6 +46,10 @@
     padding: 0 !important;
 }
 
+.ytp-delhi-modern .ytp-chapter-container {
+    padding-top: 0 !important;
+}
+
 .ytp-autohide.paused-mode .ytp-playlist-menu-button, .ytp-autohide.paused-mode .ytp-shorts-title-channel, .ytp-autohide.paused-mode .ytp-title-channel, .ytp-autohide.paused-mode .ytp-title, .ytp-autohide.paused-mode .ytp-chrome-top .ytp-watch-later-button, .ytp-autohide.paused-mode .ytp-chrome-top .ytp-share-button, .ytp-autohide.paused-mode .ytp-chrome-top .ytp-copylink-button, .ytp-autohide.paused-mode .ytp-chrome-top .ytp-search-button, .ytp-autohide:not(.ytp-cards-teaser-shown) .ytp-cards-button, .ytp-autohide.paused-mode .ytp-overflow-button, .ytp-autohide.paused-mode .ytp-chrome-bottom, .ytp-chrome-top[aria-hidden="true"], .ytp-chrome-bottom[aria-hidden="true"] {
     display: block;
     opacity: 1;
